[package]
#name = "stklr"
name = "STKLR"
version = "0.0.1-alpha"
edition = "2021"
authors = ["jer <alphastrata@gmail.com>"]
license = "MIT"
description = """
STKLR: pronounced 'stickler'.
Is a cli tool to automatically link functions, enums, structs, traits etc in rust-doc docstrings. I couldn't this when I needed it, so, here we are...
"""
homepage= "https://github.com/alphastrata/stklr.git"
repository = "https://github.com/alphastrata/stklr.git"
readme = "README.md"
keywords = ["docs", "rust-doc", "regex", "grep", "egrep", "search", "pattern"]
categories = ["command-line-utilities", "text-processing"]
publish = true

[[bin]]
name = "stklr"

[dependencies]
anyhow = "1.0.65"
chrono = "0.4.22"
clap = { version = "4.0.9", features = ["derive"] }
fern="0.6.1"
glob = "0.3.0"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.6.0"
