[package]
name = "STKLR"
version = "0.0.42"
edition = "2021"
authors = ["jer <alphastrata@gmail.com>"]
license = "MIT"
description = """
STKLR: pronounced 'stickler'.

Is a cli tool to automatically link functions, enums, structs, traits etc in rust-doc docstrings. 
I couldn't find a tool like this when I needed it so... here we are.

"""
homepage= "https://github.com/alphastrata/stklr.git"
repository = "https://github.com/alphastrata/stklr.git"
readme = "README.md"
keywords = ["docs", "rust-doc", "sed", "search", "pattern"]
categories = ["command-line-utilities", "text-processing"]
publish = true

[[bin]]
name = "stklr"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.65"
chrono = "0.4.22"
clap = { version = "4.0.9", features = ["derive"] }
fern="0.6.1"
glob = "0.3.0"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.6.0"
