[package]
name = "STKLR"
version = "0.0.42"
edition = "2021"
authors = ["jer <alphastrata@gmail.com>"]
license = "MIT"
description = """
STKLR: pronounced 'stickler'.

Is a cli tool to automatically link functions, enums, structs, traits etc in rust-doc docstrings. 
I couldn't find a tool like this when I needed it so... here we are.

"""
homepage= "https://github.com/alphastrata/stklr.git"
repository = "https://github.com/alphastrata/stklr.git"
readme = "README.md"
keywords = ["docs", "rust-doc", "sed", "search", "pattern"]
categories = ["command-line-utilities", "text-processing"]
publish = true

[[bin]]
name = "stklr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
colored = "2.0.0"
glob = "0.3.1"
parking_lot = "0.12.1"
rand = "0.8.5"
syn  = {version="1.0.107", features = ["full","parsing", "extra-traits"]}
